--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <div class="max-w-2xl mx-auto p-4">
         <header class="mb-4">
             <h1 class="text-xl font-semibold">Criar Cobrança PIX - Canvi</h1>
-            <p class="text-sm text-slate-600">Plugin Kinbox (iframe) com TailwindCSS</p>
         </header>
 
         <section class="mb-4 p-3 rounded border bg-white">
@@ -28,37 +27,37 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
                     <label class="block">
                         <span class="text-sm">Valor (R$)</span>
-                        <input id="valor" type="number" min="0" step="0.01" required class="mt-1 w-full rounded border-slate-300 focus:border-indigo-500 focus:ring-indigo-500" placeholder="100.00" />
+                        <input id="valor" type="number" min="0" step="0.01" required class="mt-1 w-full rounded bg-white border-slate-500 ring-1 ring-slate-300 text-slate-900 placeholder-slate-500 py-2.5 px-3 focus:border-indigo-600 focus:ring-2 focus:ring-indigo-500" placeholder="100.00" />
                     </label>
                     <label class="block">
                         <span class="text-sm">Vencimento (opcional)</span>
-                        <input id="vencimento" type="datetime-local" class="mt-1 w-full rounded border-slate-300 focus:border-indigo-500 focus:ring-indigo-500" placeholder="" />
+                        <input id="vencimento" type="datetime-local" class="mt-1 w-full rounded bg-white border-slate-500 ring-1 ring-slate-300 text-slate-900 placeholder-slate-500 py-2.5 px-3 focus:border-indigo-600 focus:ring-2 focus:ring-indigo-500" placeholder="" />
                     </label>
                 </div>
                 <label class="block">
                     <span class="text-sm">Descrição</span>
-                    <input id="descricao" type="text" required class="mt-1 w-full rounded border-slate-300 focus:border-indigo-500 focus:ring-indigo-500" placeholder="Descrição da cobrança" />
+                    <input id="descricao" type="text" required class="mt-1 w-full rounded bg-white border-slate-500 ring-1 ring-slate-300 text-slate-900 placeholder-slate-500 py-2.5 px-3 focus:border-indigo-600 focus:ring-2 focus:ring-indigo-500" placeholder="Descrição da cobrança" />
                 </label>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
                     <label class="block">
                         <span class="text-sm">Tipo de Transação</span>
-                        <select id="tipo_transacao" class="mt-1 w-full rounded border-slate-300 focus:border-indigo-500 focus:ring-indigo-500">
+                        <select id="tipo_transacao" class="mt-1 w-full rounded bg-white border-slate-500 ring-1 ring-slate-300 text-slate-900 py-2.5 px-3 focus:border-indigo-600 focus:ring-2 focus:ring-indigo-500">
                             <option value="invoice">invoice (com webhook)</option>
                             <option value="invoiceFrenteCaixa">invoiceFrenteCaixa (sem webhook)</option>
                         </select>
                     </label>
                     <label class="block">
                         <span class="text-sm">Identificador Externo</span>
-                        <input id="identificador_externo" type="text" class="mt-1 w-full rounded border-slate-300 focus:border-indigo-500 focus:ring-indigo-500" placeholder="gerado automaticamente" />
+                        <input id="identificador_externo" type="text" class="mt-1 w-full rounded bg-white border-slate-500 ring-1 ring-slate-300 text-slate-900 placeholder-slate-500 py-2.5 px-3 focus:border-indigo-600 focus:ring-2 focus:ring-indigo-500" placeholder="gerado automaticamente" />
                     </label>
                     <label class="block">
                         <span class="text-sm">Identificador Movimento</span>
-                        <input id="identificador_movimento" type="text" class="mt-1 w-full rounded border-slate-300 focus:border-indigo-500 focus:ring-indigo-500" placeholder="gerado automaticamente" />
+                        <input id="identificador_movimento" type="text" class="mt-1 w-full rounded bg-white border-slate-500 ring-1 ring-slate-300 text-slate-900 placeholder-slate-500 py-2.5 px-3 focus:border-indigo-600 focus:ring-2 focus:ring-indigo-500" placeholder="gerado automaticamente" />
                     </label>
                 </div>
                 <label class="block">
                     <span class="text-sm">Texto de Instrução</span>
-                    <input id="texto_instrucao" type="text" required class="mt-1 w-full rounded border-slate-300 focus:border-indigo-500 focus:ring-indigo-500" placeholder="Resumo da cobrança" />
+                    <input id="texto_instrucao" type="text" required class="mt-1 w-full rounded bg-white border-slate-500 ring-1 ring-slate-300 text-slate-900 placeholder-slate-500 py-2.5 px-3 focus:border-indigo-600 focus:ring-2 focus:ring-indigo-500" placeholder="Resumo da cobrança" />
                 </label>
 
                 <div class="pt-2">
@@ -66,24 +65,24 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
                         <label class="block">
                             <span class="text-sm">Nome</span>
-                            <input id="cliente_nome" type="text" class="mt-1 w-full rounded border-slate-300 focus:border-indigo-500 focus:ring-indigo-500" />
+                            <input id="cliente_nome" type="text" class="mt-1 w-full rounded bg-white border-slate-500 ring-1 ring-slate-300 text-slate-900 placeholder-slate-500 py-2.5 px-3 focus:border-indigo-600 focus:ring-2 focus:ring-indigo-500" />
                         </label>
                         <label class="block">
                             <span class="text-sm">Email</span>
-                            <input id="cliente_email" type="email" class="mt-1 w-full rounded border-slate-300 focus:border-indigo-500 focus:ring-indigo-500" />
+                            <input id="cliente_email" type="email" class="mt-1 w-full rounded bg-white border-slate-500 ring-1 ring-slate-300 text-slate-900 placeholder-slate-500 py-2.5 px-3 focus:border-indigo-600 focus:ring-2 focus:ring-indigo-500" />
                         </label>
                     </div>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-3 mt-3">
                         <label class="block">
                             <span class="text-sm">Tipo Documento</span>
-                            <select id="cliente_tipo_documento" class="mt-1 w-full rounded border-slate-300 focus:border-indigo-500 focus:ring-indigo-500">
+                            <select id="cliente_tipo_documento" class="mt-1 w-full rounded bg-white border-slate-500 ring-1 ring-slate-300 text-slate-900 py-2.5 px-3 focus:border-indigo-600 focus:ring-2 focus:ring-indigo-500">
                                 <option value="cpf">CPF</option>
                                 <option value="cnpj">CNPJ</option>
                             </select>
                         </label>
                         <label class="block">
                             <span class="text-sm">Número Documento</span>
-                            <input id="cliente_numero_documento" type="text" class="mt-1 w-full rounded border-slate-300 focus:border-indigo-500 focus:ring-indigo-500" />
+                            <input id="cliente_numero_documento" type="text" class="mt-1 w-full rounded bg-white border-slate-500 ring-1 ring-slate-300 text-slate-900 placeholder-slate-500 py-2.5 px-3 focus:border-indigo-600 focus:ring-2 focus:ring-indigo-500" />
                         </label>
                     </div>
                 </div>
